Fix text overflow on cinema screen. Add content to README.me. Move wireframe dir to top-level.

--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -196,6 +196,21 @@
   }
 }
 
+@media (min-width: 1600px) {
+    .quote-box {
+        left: 40rem;
+        right: 40rem;
+  }
+}
+
+@media (min-width: 1800px) {
+    .quote-box {
+        left: 50rem;
+        right: 50rem;
+  }
+}
+
+
 /* -------- LoaderLoader from Codepen (lauraedw/pen/RPOoJy) -------- */
 
 #loader {
